# grpc

./: build_grpc_cshap_ext.sh  build_grpc_csharp_ext.sh
include/grpc/: grpc.h
src/core/lib/iomgr/: error.c  error.h  tcp_server_posix.c  tcp_server_utils_posix_common.c
src/core/lib/surface/: call.c  channel_goaway.c  channel_goaway.h  completion_queue.c
src/csharp/Grpc.Core/: ServerCallContext.cs
src/csharp/Grpc.Core/Internal/: CallSafeHandle.cs  NativeMethods.cs
src/csharp/ext/: grpc_csharp_ext.c
vsprojects/: grpc_csharp_ext_android.sln
vsprojects/grpc_csharp_ext_android/: CMakeLists.txt
vsprojects/grpc_csharp_ext_android/gpr_android/: gpr_android.vcxproj  gpr_android.vcxproj.filters
vsprojects/grpc_csharp_ext_android/grpc_android/: grpc_android.cpp  grpc_android.vcxproj  grpc_android.vcxproj.filters
vsprojects/grpc_csharp_ext_android/grpc_csharp_ext_android/: grpc_csharp_ext_android.vcxproj  grpc_csharp_ext_android.vcxproj.filters
vsprojects/grpc_csharp_ext_android/src/csharp/ext/: grpc_csharp_ext.c
vsprojects/vcxproj/grpc/: grpc.vcxproj  grpc.vcxproj.filters
xcprojects/grpc_csharp_ext_ios/: Podfile  Podfile_package  grpc_csharp_ext.pch
xcprojects/grpc_csharp_ext_ios/grpc_csharp_ext.xcodeproj/: project.pbxproj
xcprojects/grpc_csharp_ext_ios/grpc_csharp_ext.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcprojects/grpc_csharp_ext_ios/grpc_csharp_ext.xcodeproj/project.xcworkspace/xcshareddata/: grpc_csharp_ext.xcscmblueprint
xcprojects/grpc_csharp_ext_ios/grpc_csharp_ext.xcodeproj/xcshareddata/xcschemes/: grpc_csharp_ext.xcscheme
xcprojects/grpc_csharp_ext_ios/src/csharp/ext/: grpc_csharp_ext.c
